--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-formatter-pretty": "^6.0.1",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "husky": "^9.1.4"
   }
 }
