--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "WProofreader spelling and grammar check plugin for TinyMCE",
   "scripts": {
+    "build": "webpack --config webpack.prod.js --env mode=production",
+    "start": "webpack-dev-server --config webpack.dev.js --env mode=development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --quiet ."
   },
@@ -16,10 +18,16 @@
   },
   "homepage": "https://github.com/WebSpellChecker/wproofreader-tinymce#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-formatter-pretty": "^6.0.1",
     "eslint-plugin-import": "^2.29.1",
-    "husky": "^9.1.4"
+    "husky": "^9.1.4",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-version-file": "^0.1.7"
   }
 }
