--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js --env mode=production",
     "start": "webpack-dev-server --config webpack.dev.js --env mode=development",
+    "prepare": "npm run build",
     "test": "npm run build && karma start",
     "test-dev": "npm run build && karma start --auto-watch --no-single-run",
     "lint": "eslint --quiet ."
